# yfinance-rust

./: .gitignore  Cargo.toml  README.md
assets/: A2M.AX_20200103_20200107.json  AAPL_init_20210126.json  GXY.AX_20200103_20200107.json
src/: http.rs  main.rs  options.rs  v8chart.rs
