[package]
name = "yfinance-rust"
version = "0.1.0"
authors = ["Hongze Xia <hongzex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.2"
url = "2.2.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["rt"] } # full

[dev-dependencies]
tokio-test = "0.4.0"
